--- a/buddy.yml
+++ b/buddy.yml
@@ -2,8 +2,7 @@
   events:
     - type: 'PUSH'
       refs:
-        - 'refs/pull/*'
-        - 'refs/heads/master'
+        - 'refs/heads/feature/frw-8868/dev-hakaton-minimized-ci'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
