--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,8 +159,8 @@ jobs:
 
     php-82-mariadb-glue-alpine:
         name: "PHP 8.2 / MariaDB / Glue / Alpine"
+        if: !contains(github.event.issue.labels.*.name, 'hackathon')
         runs-on: ubuntu-20.04
-        if: ${{ !contains(github.event.issue.labels.*.name, 'hackathon') }}
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.2
