FRW-8868 hackathon CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ concurrency:
 jobs:
     validation:
         name: "CS, ArchSniffer, PHPStan, Evaluator"
+        if: matrix.php-version == '8.1' || (matrix.php-version == '8.2' && !contains(github.event.pull_request.labels.*.name, 'hackathon'))
         runs-on: ubuntu-20.04
         strategy:
             fail-fast: false
@@ -22,6 +23,7 @@ jobs:
                     '8.1',
                     '8.2'
                 ]
+
         env:
             APPLICATION_ENV: ci.mysql
             APPLICATION_STORE: DE
@@ -155,10 +157,6 @@ jobs:
 
             - name: Run Evaluator
               run: vendor/bin/evaluator evaluate
-
-        if: |
-            matrix.php-version == '8.1' || 
-            (matrix.php-version == '8.2' && !contains(github.event.pull_request.labels.*.name, 'hackathon'))
 
     php-82-mariadb-glue-alpine:
         name: "PHP 8.2 / MariaDB / Glue / Alpine"
