--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ jobs:
     validation:
         name: "CS, ArchSniffer, PHPStan, Evaluator"
         runs-on: ubuntu-20.04
-        if: "matrix.php-version == '8.1' || (matrix.php-version == '8.2' && !contains(github.event.pull_request.labels.*.name, 'hackathon'))"
         strategy:
             fail-fast: false
             matrix:
@@ -23,6 +22,11 @@ jobs:
                     '8.1',
                     '8.2'
                 ]
+                include:
+                    - php-version: '8.1'
+                      run_job: true
+                    - php-version: '8.2'
+                      run_job: ${{ !contains(github.event.pull_request.labels.*.name, 'hackathon') }}
 
         env:
             APPLICATION_ENV: ci.mysql
