--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
                     '8.1',
                     '8.2'
                 ]
-                is-hackathon-pr: "contains(github.event.pull_request.labels.*.name, 'hackathon')"
+                is-hackathon-pr: ${{ contains(github.event.pull_request.labels.*.name, 'hackathon') }}
                 exclude:
                     - is-hackathon-pr: true
                       php-version: '8.2'
