--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -242,8 +242,8 @@ jobs:
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
 
-    positive-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
-        name: "Positive / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
+    glue-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
+        name: "Glue / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -293,7 +293,7 @@ jobs:
             -   name: Run Tests
                 run: |
                     cd robotframework-tests
-                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring -s '*'.tests.api.suite.'*'.positive .
+                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include glue -s '*'.tests.api.suite .
                     touch results/time.txt && echo $(date) > results/time.txt
             -   name: Upload artifacts
                 if: failure()
@@ -302,8 +302,8 @@ jobs:
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
 
-    negative-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
-        name: "Negative / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
+    non-glue--docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
+        name: "Non-Glue / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -353,7 +353,7 @@ jobs:
             -   name: Run Tests
                 run: |
                     cd robotframework-tests
-                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring -s '*'.tests.api.suite.'*'.negative .
+                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoringORglue -s '*'.tests.api.suite .
                     touch results/time.txt && echo $(date) > results/time.txt
             -   name: Upload artifacts
                 if: failure()
