--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,9 @@ jobs:
             - name: Composer install
               run: composer install
 
+            - name: Dump Composer autoload
+              run: composer dump-autoload -o -a --apcu
+
             - name: Generate transfer objects
               run: vendor/bin/console transfer:generate
 
@@ -245,8 +248,8 @@ jobs:
                   docker/sdk testing codecept run -c codeception.acceptance.yml
 
 
-    glue-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
-        name: "Glue / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
+    positive-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
+        name: "Positive / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -291,12 +294,12 @@ jobs:
             -   name: Custom commands
                 continue-on-error: false
                 run: |
-                    docker/sdk cli composer dump-autoload -o -a
+                    docker/sdk cli composer dump-autoload -o -a --apcu
                     SPRYKER_CURRENT_REGION=EU docker/sdk console queue:worker:start --stop-when-empty
             -   name: Run Tests
                 run: |
                     cd robotframework-tests
-                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring --include glue -s '*'.tests.api.suite .
+                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring -s '*'.tests.api.suite.'*'.positive .
                     touch results/time.txt && echo $(date) > results/time.txt
             -   name: Upload artifacts
                 if: failure()
@@ -305,8 +308,8 @@ jobs:
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
 
-    non-glue--docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
-        name: "Non-Glue / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
+    negative-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
+        name: "Negative / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -351,12 +354,12 @@ jobs:
             -   name: Custom commands
                 continue-on-error: false
                 run: |
-                    docker/sdk cli composer dump-autoload -o -a
+                    docker/sdk cli composer dump-autoload -o -a --apcu
                     SPRYKER_CURRENT_REGION=EU docker/sdk console queue:worker:start --stop-when-empty
             -   name: Run Tests
                 run: |
                     cd robotframework-tests
-                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoringORglue -s '*'.tests.api.suite .
+                    robot -v env:api_suite -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local -v ignore_console:false -d results --exclude skip-due-to-issueORskip-due-to-refactoring -s '*'.tests.api.suite.'*'.negative .
                     touch results/time.txt && echo $(date) > results/time.txt
             -   name: Upload artifacts
                 if: failure()
