FRW-8868 hackathon CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -548,7 +548,7 @@ jobs:
             -   name: Custom commands
                 continue-on-error: false
                 run: |
-                    docker/sdk cli composer dump-autoload -o -a
+                    docker/sdk cli composer dump-autoload -o -a --apcu
                     SPRYKER_CURRENT_REGION=EU docker/sdk console queue:worker:start --stop-when-empty
             -   name: Run Tests
                 run: |
