--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,6 @@ on:
             - master
     workflow_dispatch:
 
-env:
-    IS_HACKATHON_PR: ${{ contains(github.event.pull_request.labels.*.name, 'hackathon') }}
 concurrency:
     group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
@@ -161,7 +159,7 @@ jobs:
 
     php-82-mariadb-glue-alpine:
         name: "PHP 8.2 / MariaDB / Glue / Alpine"
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -191,7 +189,7 @@ jobs:
 
     php-82-mariadb-acceptance-alpine:
         name: "PHP 8.2 / MariaDB / Acceptance / Alpine"
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -307,7 +305,7 @@ jobs:
 
     php-81-postgresql-functional-alpine:
         name: "PHP 8.1 / PostgreSQL / Functional / Alpine"
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -336,7 +334,7 @@ jobs:
 
     php-81-mariadb-acceptance-alpine:
         name: "PHP 8.1 / MariaDB / Acceptance / Alpine"
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -367,7 +365,7 @@ jobs:
     php-81-mariadb-functional-alpine:
         name: "PHP 8.1 / MariaDB / Functional / Alpine"
         runs-on: ubuntu-20.04
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.1
@@ -395,7 +393,7 @@ jobs:
 
     php-81-postgres-functional-debian:
         name: "PHP 8.1 / PostgreSQL / Functional / Debian"
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         runs-on: ubuntu-20.04
         env:
             PROGRESS_TYPE: plain
@@ -425,7 +423,7 @@ jobs:
     php-81-frontend-and-assets-alpine:
         name: "PHP 8.1 / Frontend & Assets / Alpine"
         runs-on: ubuntu-20.04
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.1
@@ -455,7 +453,7 @@ jobs:
     php-81-lowest:
         name: "PHP 8.1 / Prefer Lowest"
         runs-on: ubuntu-20.04
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
 
         env:
             PROGRESS_TYPE: plain
@@ -533,7 +531,7 @@ jobs:
     docker-alpine-php-8-2-postgresql-robot:
         name: "Docker / Alpine / PHP 8.2 / PostgreSQL / Robot / API"
         runs-on: ubuntu-20.04
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.2
@@ -586,7 +584,7 @@ jobs:
     docker-alpine-php-8-2-mariadb-robot-dynamic-multistore:
         name: "Docker / Alpine / PHP 8.2 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
-        if: ${{ !env.IS_HACKATHON_PR }}
+        if: "!contains(github.event.pull_request.labels.*.name, 'hackathon')"
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.2
@@ -647,7 +645,7 @@ jobs:
     positive-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
         name: "[Hackathon] Positive / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
-        if: ${{ env.IS_HACKATHON_PR }}
+        if: "contains(github.event.pull_request.labels.*.name, 'hackathon')"
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.1
@@ -708,7 +706,7 @@ jobs:
     negative-docker-alpine-php-8-1-mariadb-robot-dynamic-multistore:
         name: "[Hackathon] Negative / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Multistore"
         runs-on: ubuntu-20.04
-        if: ${{ env.IS_HACKATHON_PR }}
+        if: "contains(github.event.pull_request.labels.*.name, 'hackathon')"
         env:
             PROGRESS_TYPE: plain
             SPRYKER_PLATFORM_IMAGE: spryker/php:8.1
