--- a/buddy.yml
+++ b/buddy.yml
@@ -1025,10 +1025,8 @@
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
   clone_depth: 1
-  trigger_conditions:
-      - trigger_condition: "VAR_NOT_CONTAINS"
-        trigger_variable_value: "hackathon"
-        trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_BASE_BRANCH"
+  condition:
+      condition: "!contains(events.refs, 'hackathon')"
   resources: 'NANO'
   actions:
       - action: 'Run tests'
