FRW-8868 Adjusted buddy.yml.

--- a/buddy.yml
+++ b/buddy.yml
@@ -1015,18 +1015,24 @@
         instance_type: 'GENERAL_MEDIUM'
 
 - pipeline: '[Hackathon] Docker / Debian / PHP 8.2 / Frontend & Assets'
+  trigger_mode: 'ON_EVERY_PUSH'
   events:
-      - type: 'PUSH'
-        refs:
-            - 'refs/pull/*'
-            - 'refs/heads/master'
+    - type: 'PUSH'
+      refs:
+        - 'refs/pull/*'
+        - 'refs/heads/master'
+  condition:
+    scripts:
+      - |
+        if [[ "$BUDDY_EXECUTION_BRANCH" == *"hackathon"* ]]; then
+          echo "Branch name contains 'hello'. Skipping pipeline."
+          exit 1
+        fi
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
   clone_depth: 1
-  condition:
-      condition: "!contains(events.refs, 'hackathon')"
   resources: 'NANO'
   actions:
       - action: 'Run tests'
