--- a/buddy.yml
+++ b/buddy.yml
@@ -1016,18 +1016,19 @@
 
 - pipeline: '[Hackathon] Docker / Debian / PHP 8.2 / Frontend & Assets'
   events:
-    - type: 'PUSH'
-      refs:
-        - 'refs/pull/*'
-        - 'refs/heads/master'
-  ref_name:
-    exclude:
-      - "*hackathon*"
+      - type: 'PUSH'
+        refs:
+            - 'refs/pull/*'
+            - 'refs/heads/master'
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
   clone_depth: 1
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_BRANCH"
   resources: 'NANO'
   actions:
       - action: 'Run tests'
