--- a/buddy.yml
+++ b/buddy.yml
@@ -1015,20 +1015,18 @@
         instance_type: 'GENERAL_MEDIUM'
 
 - pipeline: '[Hackathon] Docker / Debian / PHP 8.2 / Frontend & Assets'
-  events:
-      - type: 'PUSH'
-        refs:
-            - 'refs/pull/*'
-            - 'refs/heads/master'
+  trigger_mode: "ON_EVERY_PUSH"
+  ref_name: "*"
+  ref_type: "WILDCARD"
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
   concurrent_pipeline_runs: true
   clone_depth: 1
-  trigger_conditions:
-    - trigger_condition: "VAR_NOT_CONTAINS"
-      trigger_variable_value: "hackathon"
-      trigger_variable_key: "BUDDY_EXECUTION_BRANCH"
   resources: 'NANO'
   actions:
       - action: 'Run tests'
